# csv-dict

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
csv_dict/: __init__.py  core.py
tests/: test_csv_dict.py
